--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,53 @@
-anyio==3.2.1
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
-certifi==2021.5.30
-cffi @ file:///C:/ci/cffi_1625831749120/work
-chardet==4.0.0
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
+cffi==1.14.5
+colorama==0.4.4
+decorator==4.4.2
+defusedxml==0.6.0
 entrypoints==0.3
-idna==2.10
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877484576/work
-ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1617121002983/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-jedi==0.17.0
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyter-server==1.9.0
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-MarkupSafe @ file:///C:/ci/markupsafe_1621528314575/work
+idna==3.1
+ipykernel==5.4.3
+ipython==7.20.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+jupyter-server==1.3.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+MarkupSafe==1.1.1
 mistune==0.8.4
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1624479163777/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///C:/ci/notebook_1621528634641/work
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
+notebook==6.2.0
+packaging==20.9
+pandocfilters==1.4.3
+parso==0.8.1
+pickleshare==0.7.5
+prometheus-client==0.9.0
+prompt-toolkit==3.0.16
+pycparser==2.20
+Pygments==2.8.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
 pywinpty==0.5.7
-pyzmq==20.0.0
-requests==2.25.1
-requests-unixsocket==0.2.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
+pyzmq==22.0.3
+Send2Trash==1.5.0
+six==1.15.0
 sniffio==1.2.0
-terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-urllib3==1.26.6
-voila==0.2.10
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+testpath==0.4.4
+tornado==6.1
+traitlets==5.0.5
+voila==0.2.6
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.1.0
 widgetsnbextension==3.5.1
-wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1625570634446/work
